fix: cursor pointer on mobile menu, added z-index

--- a/src/app.css
+++ b/src/app.css
@@ -592,6 +592,18 @@ video {
   z-index: -50;
 }
 
+.z-50{
+  z-index: 50;
+}
+
+.z-0{
+  z-index: 0;
+}
+
+.z-10{
+  z-index: 10;
+}
+
 .m-auto{
   margin: auto;
 }
@@ -723,6 +735,10 @@ video {
   gap: 2rem;
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
+
 .rounded-lg{
   border-radius: 0.5rem;
 }
@@ -801,6 +817,10 @@ video {
 .bg-veryDarkBlue{
   --tw-bg-opacity: 1;
   background-color: hsl(229 31% 21% / var(--tw-bg-opacity));
+}
+
+.bg-error{
+  background-image: ./src/assets/images/icon-error.svg;
 }
 
 .fill-veryDarkBlue{
